adding bouncing ball
set the background colors and the bouncing action.  Need the transformation of the ball at the bottom and the shadow

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+<div class="ball bouncing-ball"></div>
+</main>
+
+
     <script></script>
 </body>
 </html>
